# openplc-runtime-v4

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  C_PYTHON_DATA_SHARING_PROPOSAL.md  Dockerfile  Dockerfile.dev  OPCUA_PLUGIN_FEATURES.md  OPCUA_PLUGIN_REFACTORING.md  README.md  install.sh  plugins.conf  plugins_default.conf  project.yml  pyproject.toml  pytest.ini  requirements.txt  start_openplc.sh  test.py
.github/workflows/: docker.yml  windows-installer.yml
core/src/: CMakeLists.txt  glueVars.c  log.c  plc_main.c  utils.c  utils.h  watchdog.c
core/src/drivers/: README.md  plugin_config.c  plugin_config.h  plugin_driver.c  plugin_driver.h  plugin_types.h  plugin_utils.c  plugin_utils.h  python_plugin_bridge.h
core/src/drivers/plugins/native/: plugin_logger.c
core/src/drivers/plugins/native/examples/: Makefile  test_plugin.c  test_plugin_loader.c
core/src/drivers/plugins/python/examples/: buffer_access_example.py  example_python_plugin.py
core/src/drivers/plugins/python/modbus_master/: conftest.py  modbus_master.json  modbus_master_connection.py  modbus_master_memory.py  modbus_master_plugin.py  modbus_master_types.py  modbus_master_utils.py  requirements.txt  test_modbus_master.py  test_modbus_master_config.json  test_modbus_master_config_model.py  test_modbus_master_plugin.py  test_modbus_plugin.py  test_modbus_plugin_mocked.py  test_modbus_slave_device.py
core/src/drivers/plugins/python/modbus_master/test/: script_slave.py
core/src/drivers/plugins/python/modbus_slave/: conftest.py  modbus_slave_config.json  requirements.txt  simple_modbus.py  test_inputs.py  test_modbus_slave.py  test_openplc_input_registers_datablock.py  test_sba_access.py
core/src/drivers/plugins/python/opcua/: OPCUA_CONFIGURATION_GUIDE.md  SUBSCRIPTION_IMPLEMENTATION.md  __init__.py  address_space.py  callbacks.py  config.py  opcua.json  opcua_config_template.json  opcua_endpoints_config.py  opcua_logging.py  opcua_memory.py  opcua_security.py  opcua_types.py  opcua_utils.py  plugin.py  requirements.txt  server.py  synchronization.py  user_manager.py
core/src/drivers/plugins/python/opcua/test_configs/: opcua_config_def_nested_structures.json  opcua_config_def_simple_var.json
core/src/drivers/plugins/python/opcua/tests/: test_server_standalone.py  test_subscription_client.py
core/src/drivers/plugins/python/shared/: API_SPECIFICATION.md  __init__.py  batch_processor.py  buffer_accessor.py  buffer_types.py  buffer_validator.py  capsule_extraction.py  component_interfaces.py  config_handler.py  debug_utils.py  iec_types.py  mutex_manager.py  plugin_logger.py  plugin_runtime_args.py  plugin_structure_validator.py  python_plugin_types.py  safe_buffer_access_refactored.py  safe_logging_access.py
core/src/drivers/plugins/python/shared/plugin_config_decode/: __init__.py  modbus_master_config_model.py  opcua_config_model.py  plugin_config_contact.py  test_modbus_master_config_model.py  test_plugin_config_models.py
core/src/plc_app/: client_tcp_udp.c  debug_handler.c  debug_handler.h  image_tables.c  image_tables.h  journal_buffer.c  plc_main.c  plc_state_manager.c  plc_state_manager.h  plcapp_manager.c  plcapp_manager.h  plugin_manager.c  plugin_manager.h  python_loader.c  scan_cycle_manager.c  scan_cycle_manager.h  unix_socket.c  unix_socket.h  watchdog.c
core/src/plc_app/include/: iec_python.h
core/src/plc_app/utils/: log.c  log.h  utils.c  utils.h  watchdog.c  watchdog.h
docs/: API.md  ARCHITECTURE.md  COMPILATION_FLOW.md  DEBUG_PROTOCOL.md  DEVELOPMENT.md  DOCKER.md  EDITOR_INTEGRATION.md  LOGGING_NORMALIZATION_PLAN.md  PLUGIN_VENV_GUIDE.md  SECURITY.md  TROUBLESHOOTING.md
docs/opcua/: OPCUA_AUTHENTICATION_REVIEW.md  OPCUA_CONFIGURATION_GUIDE.md  OPCUA_SECURITY_MODE_INSUFFICIENT_ANALYSIS.md
docs/plans/: TIME_TYPE_SUPPORT_PLAN.md
docs/pr-reviews/: PR_REVIEW_CHECKLIST.md
scripts/: build-docker-image-dev.sh  build-docker-image.sh  compile-clean.sh  compile.sh  exec.sh  generate-gluevars.sh  manage_plugin_venvs.sh  run-drivers-tests.sh  run-image-dev.sh  run-image.sh  setup-tests-env.sh
tests/: test_plugin_config.c  test_plugin_driver.c
tests/pytest/: conftest.py  test.py  test_logger_buffer.py  worker.py
tests/pytest/logger/: test_logger_buffer.py  test_logger_init.py  test_logging.py
tests/pytest/modbus_master/: conftest.py  test_modbus_master_plugin.py  test_modbus_slave_device.py
tests/pytest/modbus_slave/: conftest.py  test_inputs.py  test_modbus_slave.py
tests/pytest/plugins/: __init__.py
tests/pytest/plugins/opcua/: __init__.py  conftest.py  test_callbacks.py  test_data_types.py  test_memory.py  test_subscription_integration.py  test_subscription_performance.py  test_subscriptions.py  test_type_conversions.py  test_user_manager.py
tests/pytest/plugins/opcua/test_project/: __init__.py  opcua_datatype_test.json  opcua_datatype_test.st
tests/pytest/plugins/opcua/test_project/client_certs/: uaexpert.der
tests/support/: plugin_driver_stubs.c
webserver/: DEBUG_WEBSOCKET.md  __init__.py  app.py  config.py  credentials.py  debug_websocket.py  openplc.py  plcapp_management.py  plugin_config_model.py  restapi.py  runtimemanager.py  unixclient.py  unixserver.py
webserver/logger/: __init__.py  bufferhandler.py  formatter.py  logger.py  logger_module_documentation.md  parser.py
windows/: README.md  StartOpenPLC.bat  provision-msys2.sh  setup.iss
